--- a/app/components/Player.css
+++ b/app/components/Player.css
@@ -20,6 +20,15 @@
   display: flex;
   flex-direction: row;
   align-items: center;
+
+  background: none;
+  color: white;
+  border: none;
+  outline: none;
+}
+
+.button > .label {
+  color: lightblue;
 }
 
 .label {
