--- a/app/components/Player.css
+++ b/app/components/Player.css
@@ -8,6 +8,7 @@
   justify-content: space-evenly;
 }
 
+.skip,
 .seek,
 .playPause {
   display: flex;
@@ -18,7 +19,7 @@
 .button {
   margin: 1rem;
   display: flex;
-  flex-direction: row;
+  flex-direction: column;
   align-items: center;
   background: none;
   color: white;
@@ -28,7 +29,7 @@
 
 .label {
   font-size: 4em;
-  margin: 1rem;
+  margin: 0 1rem 1rem;
 }
 
 .button > .label {
